Fixes visual issues when the object label is too long.

--- a/tool-ui/src/main/webapp/style/v3/element.less
+++ b/tool-ui/src/main/webapp/style/v3/element.less
@@ -31,6 +31,10 @@
   }
 }
 
+.breakable {
+  word-break: break-all;
+}
+
 @import 'form';
 
 .clearfix {
